2006-01-18  Miguel Guzman  <aglanor@gmail.com>
    * src/services/sound/SoundService.*:
        * added a method to update the listener position
    * src/components/ogre/AvatarCamera.*:
        * made AvatarCamera an Ogre::FrameListener
        * each frame, it updates the SoundService listener position
          to the camera position

2006-01-17  Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/EmberEntity.*|EmberPhysicalEntity.*:
        * made onTalk work since the signature been changed
        * fixed the signature of onAction

2006-01-17  Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/widgets/EntityCEGUITexture.cpp: fixed a problem with too short far clipping distance
    * src/components/ogre/widgets/IngameChatWidget.cpp: use buttons for the suggested responses instead of just static text boxes
    * src/components/ogre/widgets/ModelEdit.layout|ModelEdit.lua:
        * added removal of submodels
        * better display of the properties of Models


2006-01-17  Erik Hjortsberg  <erik@katastrof.nu>

     * src/components/ogre/scripting/bindings/lua/*: updated bindings

2006-01-15  Miguel Guzman  <aglanor@gmail.com>

	* configure.ac: added check for freealut 1.0.0
	* src/components/ogre/EmberOgre.cpp: added traces to std::cout since it can't log to the OgreLogObserver until Ogre has started
	* src/services/sound/SoundService.cpp: added playing of a "Hello World" sound when the command "/playsound" is invoked

2006-01-15  Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/widgets/EntityCEGUITexture.*:
        * make it use its own scene manager, thus completely separating it from all other scenes
        * mount the camera on a yawing and pitching mount
        * cleaned up the code, the camera mount code should perhaps be separated, together with the AvatarCamera code, inte a CameraMount class
     * src/components/ogre/widgets/JesusEdit.cpp|ModelRendere.cpp: update to changes in EntityCEGUITexture